--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Le-Noir</title>
-</head>
-<header>
-    <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="./images/logo.png" width="40" height="40" class="d-inline-block align-center" alt="">
-            Le-Noir Web-Entwicklung
-        </a>
-    </nav>
-</header>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+      <link rel="stylesheet" href="./css/style.css">
+      <title>Le-Noir</title>
+  </head>
+  <header>
+      <nav class="navbar fixed-top navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+              <img src="./images/logo.png" width="40" height="40" class="d-inline-block align-center" alt="">
+              Le-Noir Web-Entwicklung
+          </a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Web-Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Web-Entwicklung</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Support</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Über uns</a>
+            </li>
+          </ul>
+      </nav>
+  </header>
+  <body>
     <section class="showcase">
         <img src="./images/bg.jpg" alt="Picture">
         <div class="overlay">
@@ -26,37 +41,72 @@
         </div>
     </section>
 
-    <div class="services">
-        <h3 id="services-header">SERVICES</h3>
-        <div class="row services-row">
-            <div class="col-md-3 service-card">
-                <h5 class="services-sub-header">Web-Design</h5>
+    <div class="content">
+        <h3 class="content-header">DIENSTLEISTUNGEN</h3>
+        <p>
+            Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
+            <br>
+            Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
+            wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
+        </p>
+
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
+                <i class="bi bi-palette-fill" style="margin-right: 1%;"></i>Web-Design
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
                 <p>
-                    Vom Konzept zum fertigen Design-Entwurf ihrer Webseite.
-                    <br><br>
-                    Wir nehmen uns Ihre Wünsche zu Herzen und ergänzen Sie durch Jahrelange Expertise
-                    im Bereich des Webdesigns. 
+                  Vom Konzept zum fertigen Design-Entwurf Ihrer Webseite
+                  <br><br>
+                  Ihr Traum von einer modernen und ansprechenden Webseite beginnt bei Le-Noir Web-Entwicklung!
+                  <br><br>
+                  Wir begleiten Sie von der ersten Idee bis zum fertigen Design-Entwurf Ihrer Webseite und sorgen dafür, dass Ihre Online-Präsenz perfekt zu Ihnen und Ihren Zielen passt.
                 </p>
+              </div>
             </div>
-            <div class="col-md-3 service-card">
-                <h5 class="services-sub-header">Web-Entwicklung</h5>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="font-weight: bolder;">
+                <i class="bi bi-laptop-fill" style="margin-right: 1%;"></i>Web-Entwicklung  
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
                 <p>
-                    Wir lassen Ihren Traum real werden!
-                    <br><br>
-                    Dabei ist es uns wichtig, alle Ihre Inputs zu berücksichtigen 
-                    und möglichst zeitnah das perfekte Endprodukt zu liefern. 
-                </p>
+                  Wir lassen Ihren Traum real werden!
+                  <br><br>
+                  Mit Leidenschaft und Expertise zum perfekten Ergebnis
+                  <br><br>
+                  Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, um Ihre Bedürfnisse und Wünsche genau zu verstehen, und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
+                  Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, um sicherzustellen, dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.
+                </p>    
+              </div>
             </div>
-            <div class="col-md-3 service-card">
-                <h5 class="services-sub-header">Support</h5>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="font-weight: bolder;">
+                <i class="bi bi-question-circle-fill" style="margin-right: 1%;"></i>Support  
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
                 <p>
-                    Fragen nach Abschluss des Projekts?
-                    <br><br>
-                    Kontaktieren Sie uns jederzeit bei allen Fragen, rund um Ihre Webseite.
-                    Sei es eine Design Anpassung oder eine allgemeine Frage. Wir helfen
-                    Ihnen immer weiter.
+                  Fragen nach Abschluss des Projekts?
+                  <br><br>
+                  Wir sind auch nach Fertigstellung Ihrer Webseite für Sie da!
+                  <br><br>
+                  Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
+                  werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
                 </p>
+              </div>
             </div>
+          </div>
         </div>
     </div>
 
@@ -68,11 +118,42 @@
             <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
         </div>
     </section>
-</body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="./js/site.js"></script>
-
+    <div class="content">
+      <h3 class="content-header">WEB-ENTWICKLUNG</h3>
+      <!--<div class="row">
+        <div class="card col-md-4">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card col-md-4">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card col-md-4" >
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>-->
+      <p>
+          Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
+          <br>
+          Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
+          wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
+      </p>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
+    <script src="./js/site.js"></script>
+  </body>    
 </html>
