--- a/pages/about.html
+++ b/pages/about.html
@@ -5,34 +5,34 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./../css/style.css">
       <title>Le-Noir</title>
   </head>
   <header>
       <nav class="navbar fixed-top navbar-light bg-light">
-          <a class="navbar-brand" href="./index.html">
-              <img src="./images/logo.png" width="40" height="40" class="d-inline-block align-center" alt="">
+          <a class="navbar-brand" href="./../index.html">
+              <img src="./../images/logo.png" width="40" height="40" class="d-inline-block align-center" alt="">
               Le-Noir
           </a>
           <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./pages/web-design.html">Web-Design</a>
+              <a class="nav-link" aria-current="page" href="./web-design.html">Web-Design</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/web-dev.html">Web-Entwicklung</a>
+              <a class="nav-link" href="./web-dev.html">Web-Entwicklung</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/support.html">Support</a>
+              <a class="nav-link" href="./support.html">Support</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/about.html">Über uns</a>
+              <a class="nav-link" href="./about.html">Über uns</a>
             </li>
           </ul>
       </nav>
   </header>
   <body>
     <section class="showcase">
-      <img src="./images/bg.jpg" alt="Picture">
+      <img src="./../images/bg.jpg" alt="Picture">
       <div class="overlay">
         <h2 style="font-weight: bolder;" class="overlay-header">LE-NOIR</h2>
         <p class="overlay-body">
@@ -66,7 +66,6 @@
                   <br><br>
                   Wir begleiten Sie von der ersten Idee bis zum fertigen Design-Entwurf Ihrer Webseite und sorgen dafür, dass Ihre Online-Präsenz perfekt zu Ihnen und Ihren Zielen passt.
                 </p>
-                <button type="button" class="btn btn-dark"><a href="./pages/web-design.html" class="more-link">Mehr erfahren</a></button>
               </div>
             </div>
           </div>
@@ -86,7 +85,6 @@
                   Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, um Ihre Bedürfnisse und Wünsche genau zu verstehen, und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
                   Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, um sicherzustellen, dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.
                 </p>    
-                <button type="button" class="btn btn-dark"><a href="./pages/web-dev.html" class="more-link">Mehr erfahren</a></button>
               </div>
             </div>
           </div>
@@ -106,7 +104,6 @@
                   Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
                   werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
                 </p>
-                <button type="button" class="btn btn-dark"><a href="./pages/support.html" class="more-link">Mehr erfahren</a></button>
               </div>
             </div>
           </div>
@@ -114,7 +111,7 @@
     </div>
 
     <section class="showcase">
-        <img src="./images/appointment-bg.jpg" alt="Picture">
+        <img src="./../images/appointment-bg.jpg" alt="Picture">
         <div class="overlay-appointment">
             <h2 class="appointment-header">BERATUNGSTERMIN</h2>
             <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
@@ -126,6 +123,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
-    <script src="./js/site.js"></script>
+    <script src="./../js/site.js"></script>
   </body>    
 </html>
