--- a/pages/web-content.html
+++ b/pages/web-content.html
@@ -10,9 +10,9 @@
   </head>
   <header>
       <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="./i../ndex.html">
+        <a class="navbar-brand" href="./../index.html">
           <img src="./../images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
-          <span class="navbar-heading">Le-Noir</span>
+            Le-Noir
         </a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
