--- a/pages/web-design.html
+++ b/pages/web-design.html
@@ -10,24 +10,27 @@
   </head>
   <header>
       <nav class="navbar fixed-top navbar-light bg-light">
-          <a class="navbar-brand" href="./../index.html">
-              <img src="./../images/logo.png" width="40" height="40" class="d-inline-block align-center" alt="">
-              Le-Noir
-          </a>
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./web-design.html">Web-Design</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./web-dev.html">Web-Entwicklung</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./support.html">Support</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">Über uns</a>
-            </li>
-          </ul>
+        <a class="navbar-brand" href="./../index.html">
+          <img src="./../images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
+          <span class="navbar-heading">Le-Noir</span>
+        </a>
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./../pages/web-design.html">Web Design</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./../pages/web-content.html">Web Content</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./../pages/web-dev.html">Web Entwicklung</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./../pages/support.html">Support</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./../pages/about.html">Über uns</a>
+          </li>
+        </ul>
       </nav>
   </header>
   <body>
