--- a/pages/web-content.html
+++ b/pages/web-content.html
@@ -6,13 +6,14 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <link rel="stylesheet" href="./../css/style.css">
-      <title>Le-Noir</title>
+      <title>LE-NOIR</title>
+      <link rel="icon" type="image/x-icon" href="./../images/logo.ico">
   </head>
   <header>
       <nav class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="./../index.html">
           <img src="./../images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
-            Le-Noir
+          <span class="navbar-heading">LE-NOIR</span>
         </a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
