--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <link rel="stylesheet" href="./css/style.css">
-      <title>Le-Noir</title>
+      <title>LE-NOIR</title>
+      <link rel="icon" type="image/x-icon" href="./images/logo.ico">
   </head>
   <header>
       <nav class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="./index.html">
             <img src="./images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
-            <span class="navbar-heading">Le-Noir</span>
+            <span class="navbar-heading">LE-NOIR</span>
         </a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
@@ -238,5 +239,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
     <script src="./js/site.js"></script>
-  </body>    
+  </body>
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-section about">
+        <h5 class="logo-text">LE-NOIR</h5>
+        <p>
+          Wir sind ein Team von Web-Entwicklern, die sich darauf spezialisiert haben, 
+          benutzerfreundliche und ansprechende Webseiten zu erstellen, die Ergebnisse liefern.
+        </p>
+        <div class="contact">
+          <span><i class="bi bi-geo-alt-fill"></i> Oberentfelden, Schweiz</span>
+        </div>
+      </div>
+    </div>
+  </footer>    
 </html>
