--- a/pages/support.html
+++ b/pages/support.html
@@ -5,14 +5,15 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-      <link rel="stylesheet" href="./../css/style.css">
+      <link rel="stylesheet" href="./../css/style.css">    
       <title>Le-Noir</title>
+      <link rel="icon" type="image/x-icon" href="./../images/logo.ico">
   </head>
   <header>
       <nav class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="./i../ndex.html">
           <img src="./../images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
-          <span class="navbar-heading">Le-Noir</span>
+          <span class="navbar-heading">LE-NOIR</span>
         </a>
         <ul class="nav justify-content-end">
           <li class="nav-item">
