--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
       <link rel="icon" type="image/x-icon" href="./images/logo.ico">
   </head>
   <header>
-      <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="./index.html">
-            <img src="./images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
-            <span class="navbar-heading">LE-NOIR</span>
-        </a>
-        <ul class="nav justify-content-end">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+      <a class="navbar-brand" href="./index.html">
+          <img src="./images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
+          <span class="navbar-heading">LE-NOIR</span>
+      </a>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="./pages/web-design.html">Web Design</a>
           </li>
@@ -32,7 +37,8 @@
             <a class="nav-link" href="./pages/about.html">Über uns</a>
           </li>
         </ul>
-      </nav>
+      </div>
+    </nav>
   </header>
   <body>
     <section class="showcase">
