index.html anpassen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+      <div class="collapse navbar-collapse justify-content-end le-noir-nav" id="navbarToggler">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="./pages/web-design.html">Web Design</a>
@@ -53,11 +53,10 @@
 
     <div class="content">
       <h3 class="content-header">DIENSTLEISTUNGEN</h3>
-      <p>
-          Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
-          <br>
-          Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
-          wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
+      <p class="content-text">
+        Sie möchten Ihre bestehende Website überarbeiten oder eine neue Website erstellen?
+        <br>
+        Dann sind Sie bei uns an der richtigen Adresse. Ob Webdesign, Webentwicklung oder Support, wir sind immer für Sie da und geben unser Bestes, um Ihnen ein perfektes Benutzererlebnis zu bieten.
       </p>
 
       <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -250,10 +249,10 @@
     <div class="footer-content">
       <div class="footer-section about">
         <h5 class="logo-text">LE-NOIR</h5>
-        <p>
-          Wir sind ein Team von Web-Entwicklern, die sich darauf spezialisiert haben, 
-          benutzerfreundliche und ansprechende Webseiten zu erstellen, die Ergebnisse liefern.
-        </p>
+        <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
+        <span>
+          <a href=""></a>
+        </span>
         <div class="contact">
           <span><i class="bi bi-geo-alt-fill"></i> Oberentfelden, Schweiz</span>
         </div>
