--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -136,4 +136,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
     <script src="./js/site.js"></script>
   </body>    
+
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-section about">
+        <h5 class="logo-text">LE-NOIR</h5>
+        <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
+        <span class="footer-icons">
+          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
+          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
+        </span>
+        <div class="contact">
+          <span><i class="bi bi-geo-alt-fill"></i> Oberentfelden, Schweiz</span>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
