--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="footer-section about">
         <h5 class="logo-text">LE-NOIR</h5>
         <p><i class="bi bi-c-circle"></i> 2024 - Copyright</p>
-        <span class="footer-icons">
+        <span class="">
           <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
           <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.instagram.com/le_noir.ch/" class="link"><i class="bi bi-instagram"></i></i></a>
