--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -42,12 +42,9 @@
   </header>
   <body>
     <section class="showcase">
-      <img src="./../images/bg.jpg" alt="Picture">
-      <div class="overlay">
-        <h2 style="font-weight: bolder;" class="overlay-header">LE NOIR</h2>
-        <p class="overlay-body">
-          Web-Entwicklung nach Mass!
-        </p>
+      <img src="./../images/bg1.jpg" alt="Picture">
+      <div class="overlay-sub">
+        <h2 style="font-weight: bolder;" class="overlay-header">WEB ENTWICKLUNG</h2>
       </div>
     </section>
 
