Start web design content

--- a/pages/web-design.html
+++ b/pages/web-design.html
@@ -49,74 +49,134 @@
     </section>
 
     <div class="content">
-        <h3 class="content-header">DIENSTLEISTUNGEN</h3>
-        <p>
-            Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
-            <br>
-            Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
-            wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
-        </p>
-
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
-                <i class="bi bi-palette-fill" style="margin-right: 1%;"></i>Web-Design
-              </button>
-            </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Vom Konzept zum fertigen Design-Entwurf Ihrer Webseite
-                  <br><br>
-                  Ihr Traum von einer modernen und ansprechenden Webseite beginnt bei Le-Noir Web-Entwicklung!
-                  <br><br>
-                  Wir begleiten Sie von der ersten Idee bis zum fertigen Design-Entwurf Ihrer Webseite und sorgen dafür, dass Ihre Online-Präsenz perfekt zu Ihnen und Ihren Zielen passt.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="font-weight: bolder;">
-                <i class="bi bi-laptop-fill" style="margin-right: 1%;"></i>Web-Entwicklung  
-              </button>
-            </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Wir lassen Ihren Traum real werden!
-                  <br><br>
-                  Mit Leidenschaft und Expertise zum perfekten Ergebnis
-                  <br><br>
-                  Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, um Ihre Bedürfnisse und Wünsche genau zu verstehen, und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
-                  Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, um sicherzustellen, dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.
-                </p>    
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="font-weight: bolder;">
-                <i class="bi bi-question-circle-fill" style="margin-right: 1%;"></i>Support  
-              </button>
-            </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <p>
-                  Fragen nach Abschluss des Projekts?
-                  <br><br>
-                  Wir sind auch nach Fertigstellung Ihrer Webseite für Sie da!
-                  <br><br>
-                  Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
-                  werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
-                </p>
-              </div>
+      <h3 class="content-header">UNSERE LEISTUNGEN</h3>
+      <p class="content-text">
+        Ihr Erfolg im Netz beginnt mit einer benutzerfreundlichen und ansprechenden Website.
+        <br>
+        Als erfahrenes Team aus Screen- und UX-Designern vereinen wir alle relevanten Aspekte, um Ihre Online-Präsenz zu einem Erfolg zu machen:
+      </p>
+      <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
+              Nutzerzentriertes Design
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <p>
+                Ihre Zielgruppe im Fokus:
+                <br>
+                Unser Ansatz basiert auf einem tiefen Verständnis Ihrer Zielgruppe. Wir analysieren deren Bedürfnisse, Präferenzen und Verhaltensweisen, um ein Design zu entwickeln, das perfekt auf sie zugeschnitten ist und deren Erwartungen erfüllt.
+                <br><br>
+                Intuitive Nutzererfahrung (UX):
+                <br>
+                Die Interaktion mit Ihrer Website gestalten wir so intuitiv und benutzerfreundlich wie möglich. Jeder Besucher soll mühelos navigieren und sein Ziel erreichen. Unser Ziel ist es, eine positive User Experience zu schaffen, die Ihre Besucher begeistert und zu loyalen Kunden macht.
+                <br><br>
+                Klare Informationsarchitektur:
+                <br>
+                Ihre Inhalte werden von uns klar und logisch strukturiert. So finden Besucher schnell und einfach die gesuchten Informationen, was die Verweildauer auf Ihrer Website erhöht und die Conversion Rate steigert.
+                <br><br>
+                Synergieeffekt:
+                <br>
+                Durch die optimale Abstimmung von Design, UX und Informationsarchitektur entsteht eine Website, die Ihre Zielgruppe anspricht, begeistert und zum Handeln motiviert.
+              </p>
             </div>
           </div>
         </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
+              Visuelle Identität
+            </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <p>
+                Brand Design:
+                <br>
+                Wir kreieren ein visuelles Erscheinungsbild, das Ihre Marke unverwechselbar macht und bei Ihren Kunden einen bleibenden Eindruck hinterlässt.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="font-weight: bolder;">
+              Prototyping &amp; Testing
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <p>
+                Klickbarer Prototyp:
+                <br>
+                Bevor Ihre Website live geschaltet wird, erstellen wir einen interaktiven Prototyp.
+                <br><br>
+                Visualisierung und Interaktion: 
+                <br>So können Sie das Design und die Benutzerfreundlichkeit Ihrer Website bereits in einem frühen Stadium erleben und testen.
+                <br>
+                Verbesserungen vor der Umsetzung: 
+                <br>Durch die Identifizierung von Verbesserungspotenzialen im Prototyp können wir Anpassungen vornehmen, bevor die eigentliche Entwicklung beginnt.
+                <br>
+                Optimierte Benutzerfreundlichkeit: 
+                <br>So stellen wir sicher, dass Ihre Website von Anfang an intuitiv bedienbar und nutzerfreundlich ist.
+                <br><br>
+                Usability-Tests:
+                <br>
+                Um die Benutzerfreundlichkeit Ihrer Website weiter zu optimieren, führen wir Usability-Tests mit realen Nutzern durch.
+                <br><br>
+                Nutzerverhalten beobachten: 
+                <br>Wir beobachten, wie Nutzer mit Ihrer Website interagieren, und identifizieren so mögliche Probleme und Verbesserungspotenziale.
+                Wertvolle Erkenntnisse: 
+                <br>Die gewonnenen Erkenntnisse aus den Usability-Tests fließen direkt in die Weiterentwicklung Ihrer Website ein.
+                Stetige Optimierung: 
+                <br>Durch kontinuierliche Usability-Tests stellen wir sicher, dass Ihre Website den Bedürfnissen Ihrer Nutzer optimal entspricht.
+                <br><br>
+                Synergie aus Prototyp und Usability-Tests:
+                <br>
+                Die Kombination aus klickbarem Prototyp und Usability-Tests ermöglicht eine gründliche und effektive Optimierung Ihrer Website vor dem Launch.
+                <br><br>
+                Ergebnis:
+                <br>
+                Minimierte Fehlerquote: 
+                <br>Durch die frühzeitige Identifizierung und Behebung von Fehlern sorgen wir für eine hohe Qualität Ihrer Website.
+                <br>
+                Erhöhte Benutzerzufriedenheit: 
+                <br>Ihre Website wird intuitiv bedienbar und nutzerfreundlich sein, was zu einer hohen Zufriedenheit Ihrer Nutzer führt.
+                <br>
+                Verbesserte Conversion Rate: 
+                <br>Durch eine optimale User Experience werden Besucher zu Kunden und generieren Umsatz.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="font-weight: bolder;">
+              Ihre Vorteile  
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <p>
+                Mit unseren Webdesign-Leistungen sorgen wir dafür, dass Ihre Website nicht nur gut aussieht, sondern auch Ihre Zielgruppe begeistert und zum Handeln motiviert.
+                <br><br>
+                Ihre Vorteile:
+                <br>
+                Höhere Nutzerzufriedenheit: Besucher finden schnell und einfach die gesuchten Informationen und erleben Ihre Website positiv.
+                <br>
+                Verbesserte Conversion Rates: Durch intuitive Benutzerführung und ein ansprechendes Design steigern Sie die Wahrscheinlichkeit, dass Besucher zu Kunden werden.
+                <br>
+                Gestärkte Markenidentität: Ihre Website trägt zur Stärkung Ihrer Marke und zur Positionierung Ihres Unternehmens bei.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
+        
     <section class="showcase">
         <img src="./../images/appointment-bg.jpg" alt="Picture">
         <div class="overlay-appointment">
