finish web design content

--- a/pages/about.html
+++ b/pages/about.html
@@ -118,7 +118,7 @@
     </div>
 
     <section class="showcase">
-        <img src="./../images/appointment-bg.jpg" alt="Picture">
+        <img src="./../images/bg10.jpg" alt="Picture">
         <div class="overlay-appointment">
             <h2 class="appointment-header">BERATUNGSTERMIN</h2>
             <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
