--- a/pages/web-design.html
+++ b/pages/web-design.html
@@ -65,21 +65,7 @@
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <p>
-                Ihre Zielgruppe im Fokus:
-                <br>
-                Unser Ansatz basiert auf einem tiefen Verständnis Ihrer Zielgruppe. Wir analysieren deren Bedürfnisse, Präferenzen und Verhaltensweisen, um ein Design zu entwickeln, das perfekt auf sie zugeschnitten ist und deren Erwartungen erfüllt.
-                <br><br>
-                Intuitive Nutzererfahrung (UX):
-                <br>
-                Die Interaktion mit Ihrer Website gestalten wir so intuitiv und benutzerfreundlich wie möglich. Jeder Besucher soll mühelos navigieren und sein Ziel erreichen. Unser Ziel ist es, eine positive User Experience zu schaffen, die Ihre Besucher begeistert und zu loyalen Kunden macht.
-                <br><br>
-                Klare Informationsarchitektur:
-                <br>
-                Ihre Inhalte werden von uns klar und logisch strukturiert. So finden Besucher schnell und einfach die gesuchten Informationen, was die Verweildauer auf Ihrer Website erhöht und die Conversion Rate steigert.
-                <br><br>
-                Synergieeffekt:
-                <br>
-                Durch die optimale Abstimmung von Design, UX und Informationsarchitektur entsteht eine Website, die Ihre Zielgruppe anspricht, begeistert und zum Handeln motiviert.
+                <span style="font-weight: bold;">Ihr Erfolg im Fokus:</span> Mit einem tiefen Verständnis Ihrer Zielgruppe entwickeln wir ein Design, das sie begeistert und Ihre Erwartungen erfüllt. Intuitive Benutzerführung und klare Informationsarchitektur sorgen für eine positive User Experience, die Besucher zu loyalen Kunden macht. Die optimale Abstimmung aller Elemente garantiert eine Website, die Ihre Ziele effektiv erreicht.
               </p>
             </div>
           </div>
@@ -93,9 +79,7 @@
           <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <p>
-                Brand Design:
-                <br>
-                Wir kreieren ein visuelles Erscheinungsbild, das Ihre Marke unverwechselbar macht und bei Ihren Kunden einen bleibenden Eindruck hinterlässt.
+                <span style="font-weight: bold;">Unverwechselbare Markenidentität:</span> Durch ein einzigartiges visuelles Design heben wir Ihre Marke von der Konkurrenz ab und schaffen einen bleibenden Eindruck bei Ihren Kunden.
               </p>
             </div>
           </div>
@@ -109,44 +93,13 @@
           <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <p>
-                Klickbarer Prototyp:
-                <br>
-                Bevor Ihre Website live geschaltet wird, erstellen wir einen interaktiven Prototyp.
+                <span style="font-weight: bold;">Bevor Ihre Website live geht:</span> Durch einen klickbaren Prototyp erleben Sie Design und Benutzerfreundlichkeit schon früh und können Anpassungen vornehmen.
                 <br><br>
-                Visualisierung und Interaktion: 
-                <br>So können Sie das Design und die Benutzerfreundlichkeit Ihrer Website bereits in einem frühen Stadium erleben und testen.
-                <br>
-                Verbesserungen vor der Umsetzung: 
-                <br>Durch die Identifizierung von Verbesserungspotenzialen im Prototyp können wir Anpassungen vornehmen, bevor die eigentliche Entwicklung beginnt.
-                <br>
-                Optimierte Benutzerfreundlichkeit: 
-                <br>So stellen wir sicher, dass Ihre Website von Anfang an intuitiv bedienbar und nutzerfreundlich ist.
+                <span style="font-weight: bold;">Nutzer im Fokus:</span> Usability-Tests mit realen Nutzern decken Optimierungspotenziale auf und sorgen für eine intuitive, nutzerfreundliche Website.
                 <br><br>
-                Usability-Tests:
-                <br>
-                Um die Benutzerfreundlichkeit Ihrer Website weiter zu optimieren, führen wir Usability-Tests mit realen Nutzern durch.
+                <span style="font-weight: bold;">Synergieeffekt:</span> Die Kombination aus Prototyp und Tests minimiert Fehler, erhöht die Benutzerzufriedenheit und steigert die Conversion Rate.
                 <br><br>
-                Nutzerverhalten beobachten: 
-                <br>Wir beobachten, wie Nutzer mit Ihrer Website interagieren, und identifizieren so mögliche Probleme und Verbesserungspotenziale.
-                Wertvolle Erkenntnisse: 
-                <br>Die gewonnenen Erkenntnisse aus den Usability-Tests fließen direkt in die Weiterentwicklung Ihrer Website ein.
-                Stetige Optimierung: 
-                <br>Durch kontinuierliche Usability-Tests stellen wir sicher, dass Ihre Website den Bedürfnissen Ihrer Nutzer optimal entspricht.
-                <br><br>
-                Synergie aus Prototyp und Usability-Tests:
-                <br>
-                Die Kombination aus klickbarem Prototyp und Usability-Tests ermöglicht eine gründliche und effektive Optimierung Ihrer Website vor dem Launch.
-                <br><br>
-                Ergebnis:
-                <br>
-                Minimierte Fehlerquote: 
-                <br>Durch die frühzeitige Identifizierung und Behebung von Fehlern sorgen wir für eine hohe Qualität Ihrer Website.
-                <br>
-                Erhöhte Benutzerzufriedenheit: 
-                <br>Ihre Website wird intuitiv bedienbar und nutzerfreundlich sein, was zu einer hohen Zufriedenheit Ihrer Nutzer führt.
-                <br>
-                Verbesserte Conversion Rate: 
-                <br>Durch eine optimale User Experience werden Besucher zu Kunden und generieren Umsatz.
+                <span style="font-weight: bold;">Ergebnis:</span> Eine qualitativ hochwertige Website, die Ihre Nutzer begeistert und Ihre Geschäftsziele erreicht.
               </p>
             </div>
           </div>
@@ -162,13 +115,12 @@
               <p>
                 Mit unseren Webdesign-Leistungen sorgen wir dafür, dass Ihre Website nicht nur gut aussieht, sondern auch Ihre Zielgruppe begeistert und zum Handeln motiviert.
                 <br><br>
-                Ihre Vorteile:
-                <br>
+                <span style="font-weight: bold;">Ihre Vorteile:</span>
                 Höhere Nutzerzufriedenheit: Besucher finden schnell und einfach die gesuchten Informationen und erleben Ihre Website positiv.
-                <br>
-                Verbesserte Conversion Rates: Durch intuitive Benutzerführung und ein ansprechendes Design steigern Sie die Wahrscheinlichkeit, dass Besucher zu Kunden werden.
-                <br>
-                Gestärkte Markenidentität: Ihre Website trägt zur Stärkung Ihrer Marke und zur Positionierung Ihres Unternehmens bei.
+                <br><br>
+                <span style="font-weight: bold;">Verbesserte Conversion Rates:</span> Durch intuitive Benutzerführung und ein ansprechendes Design steigern Sie die Wahrscheinlichkeit, dass Besucher zu Kunden werden.
+                <br><br>
+                <span style="font-weight: bold;">Gestärkte Markenidentität:</span> Ihre Website trägt zur Stärkung Ihrer Marke und zur Positionierung Ihres Unternehmens bei.
               </p>
             </div>
           </div>
@@ -178,11 +130,11 @@
 
         
     <section class="showcase">
-        <img src="./../images/appointment-bg.jpg" alt="Picture">
+        <img src="./../images/bg6.jpg" alt="Picture">
         <div class="overlay-appointment">
-            <h2 class="appointment-header">BERATUNGSTERMIN</h2>
-            <p class="appointment-text">Vereinbaren sie noch Heute Ihren kostenlosen Beratungstermin!</p>
-            <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Beratungstermin" id="appointment-link">Termin vereinbaren</a></button>
+            <h2 class="appointment-header">INTERESSIERT?</h2>
+            <p class="appointment-text">Starten Sie jetzt mit uns Ihren Weg zum perfekten Web Design für Sie!</p>
+            <button type="button" class="btn btn-light"><a href="mailto:jan.eggenberger@bluewin.ch?subject=Web-Design" id="appointment-link">Termin vereinbaren</a></button>
         </div>
     </section>
 
